# Trendcast

./: .replit  README.md  index.html  package-lock.json  package.json  project_presentation.txt  pyproject.toml  replit.md  supabase_setup.sql  vercel.json  vite.config.js
attached_assets/: README.md
backend/: README.md  Walmart_Sales_Dataset.csv  data.json  main.py  requirements.txt
backend/api/: README.md  firebase_admin_init.py
backend/api/routes/: README.md  auth.py  forecasts.py  sales.py
src/: App.jsx  README.md  app.css  index.css  main.jsx
src/page/: AuthModal.jsx  Dashboard.jsx  Landing.jsx  README.md  auth-modal.css  auth.css  dashboard.css  forecasts.css  forecasts.jsx  landing.css  salesdata.css  salesdata.jsx
src/ui/: Dialog.jsx  README.md  sidebar.jsx  toast.jsx  ui.css
src/utils/: README.md  api.js
