[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.3.0",
    "fastapi==0.129.0",
    "flask==3.1.2",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "google-genai>=1.0.0",
    "gunicorn==25.0.2",
    "matplotlib>=3.10.8",
    "numpy==2.4.2",
    "openai>=1.0.0",
    "openpyxl==3.1.5",
    "pandas==3.0.0",
    "psycopg2-binary==2.9.11",
    "pyjwt==2.10.0",
    "python-dotenv==1.2.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.22",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "sqlalchemy==2.0.46",
    "statsmodels==0.14.6",
    "supabase>=2.15.0",
    "tenacity==9.1.4",
    "uvicorn[standard]==0.40.0",
    "watchfiles==1.1.1",
    "werkzeug==3.1.5",
]
